[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/DoubleJumpCounter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/LifeCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/CoinCounter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI.gd" type="Script" id=4]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 435.0
margin_bottom = 84.0

[node name="LifeCounter" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_right = 16.0
margin_bottom = 84.0

[node name="DoubleJumpCounter" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 20.0
margin_right = 104.0
margin_bottom = 84.0
patch_margin_left = 42
patch_margin_top = 42
patch_margin_right = 42
patch_margin_bottom = 42

[node name="Label" parent="HBoxContainer/DoubleJumpCounter" index="0"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2.0
margin_top = 118.0
margin_right = 63.0
margin_bottom = 161.0
text = "0"

[node name="TextureRect" parent="HBoxContainer/DoubleJumpCounter/Label" index="0"]
margin_left = -48.0
margin_top = -8.0
margin_right = -15.0
margin_bottom = 36.0

[node name="Counter" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 108.0
margin_right = 124.0
margin_bottom = 84.0

[node name="Label" parent="HBoxContainer/Counter" index="0"]
margin_left = -44.0
margin_top = 54.0
margin_right = 16.0
margin_bottom = 97.0

[node name="TextureRect" parent="HBoxContainer/Counter/Label" index="0"]
margin_left = -48.0
margin_top = 0.0
margin_right = -8.0
margin_bottom = 39.0

[editable path="HBoxContainer/LifeCounter"]
[editable path="HBoxContainer/DoubleJumpCounter"]
[editable path="HBoxContainer/Counter"]
